--- a/LAB_5/Maxym Pishchuk/index.html
+++ b/LAB_5/Maxym Pishchuk/index.html
@@ -108,6 +108,25 @@
     <a href="//finance.i.ua/" target="_blank"><img src="//f.i.ua/fp1_b15_c0_l0.png" border="0" alt="Курс долара"></a>
 
 
+    <form action="localhost" target="_blank" method="post">
+        <ul>
+          <li>
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="user_name">
+          </li>
+          <li>
+            <label for="mail">E-mail:</label>
+            <input type="email" id="mail" name="user_mail">
+          </li>
+          <li>
+            <label for="msg">Message:</label>
+            <textarea id="msg" name="user_message"></textarea>
+          </li>
+        </ul>
+        <li class="button">
+            <button type="submit">Send your message</button>
+        </li>
+      </form>
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/jquery-ui.js"></script>
     <script src="js/jquery.prettySocial.js"></script> 
